--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!--Meta tags-->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
+    <!--External Links-->
     <link rel="stylesheet" href="styles.css" />
+
+    <!--Title-->
     <title>Bar Chart</title>
   </head>
   <body>
+    <!--Display 40 bars-->
     <div id="bars">
       <div class="bar"></div>
       <div class="bar"></div>
